--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                 <div class="text-body">
                     <div class="text-body-container">
                         <p>
-                            Ləzzət Durağı'nda ənənəvi və müasir dadları bir araya gətiririk. Seçilmiş məhsullarla hazırlanan yeməklərimizlə unudulmaz bir təcrübə təqdim edirik.
+                            MinAli Restaurantda ənənəvi və müasir dadları bir araya gətiririk. Seçilmiş məhsullarla hazırlanan yeməklərimizlə unudulmaz bir təcrübə təqdim edirik.
                         </p>
                         <div class="ctas">
                             <a class="cta cta-primary" href="#menu">Menüyə Bax</a>
