--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         /* Hero Bölümü */
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/11368086.png') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('./11368086.png') no-repeat center center/cover;
             display: flex;
             align-items: center;
             text-align: center;
@@ -1227,3 +1227,4 @@
     </script>
 </body>
 </html>
+
